# SuperHeroFight

./: CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake  main.cpp  run.sh
CMakeScripts/: ReRunCMake.make
Debug/: main
input/: heroes.txt
src/: CMakeLists.txt  cmake_install.cmake  fight.cpp  fight.h  hero.cpp  hero.h  powers.cpp  powers.h  strlib.cpp  strlib.h
src/HW02.build/Debug/src.build/Objects-normal/x86_64/: fight.d  hero.d  powers.d  src.LinkFileList  strlib.d
tests/: CMakeLists.txt  Catch.cpp  cmake_install.cmake  studentTests.cpp
tests/HW02.build/Debug/tests.build/Objects-normal/x86_64/: Catch.d  studentTests.d  tests.LinkFileList
